@@ -1,0 +1,11 @@
+<html>
+  <meta http-equiv="Set-Cookie" content="tender=live;expires=Sun, 27-Sep-2037 00:00:00 GMT; path=/">
+  <body>
+    <a href="alt_text.html"><img alt="alt text" src="hello"></a>
+    <a href="no_alt_text.html"><img src="hello"></a>
+    <a href="nil_alt_text.html"><img alt src="hello"></a>
+    <a href="no_image.html">no image</a>
+    <a href="no_text.html"></a>
+  </body>
+</html>
+
